--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,3 +3,6 @@
 <p><%= link_to 'Stations list', railway_stations_path %></p>
 
 <p><%= link_to 'Trains list', trains_path %></p>
+
+<p><%= link_to 'Routes list', routes_path %></p>
+
