--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -5,5 +5,27 @@
   <%= @route.name %>
 </p>
 
+<% if @route.trains.empty? %>
+  <p>Route has no trains</p>
+<% else %>
+  <p>Route has such trains:</p>
+  <ul>
+    <% @route.trains.each do |train| %>
+      <li><%= train.number %></li>
+    <% end %>
+  </ul>
+<% end %>
+
+<% if @route.railway_stations.empty? %>
+  <p>Route has no stations</p>
+<% else %>
+  <p>Route has such stations:</p>
+  <ul>
+    <% @route.railway_stations.each do |station| %>
+      <li><%= station.title %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= link_to 'Edit', edit_route_path(@route) %> |
 <%= link_to 'Back', routes_path %>
