--- a/app/views/routes/_form.html.erb
+++ b/app/views/routes/_form.html.erb
@@ -1,15 +1,5 @@
 <%= form_with(model: route, local: true) do |form| %>
-  <% if route.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(route.errors.count, "error") %> prohibited this route from being saved:</h2>
-
-      <ul>
-      <% route.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= render 'common/errors', resource: route %>
 
   <div class="field">
     <%= form.label :name %>
@@ -17,6 +7,6 @@
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit "#{ route.new_record?  ? 'Create' : 'Update' }" %>
   </div>
 <% end %>
