--- a/app/views/carriages/edit.html.erb
+++ b/app/views/carriages/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', carriage: @carriage %>
 
-<%= link_to 'Show', @carriage %> |
+<%= link_to 'Show', @carriage.becomes(Carriage) %> |
 <%= link_to 'Back', carriage_path %>
