--- a/app/views/carriages/index.html.erb
+++ b/app/views/carriages/index.html.erb
@@ -6,15 +6,18 @@
   <thead>
   <tr>
     <th>Train</th>
-    <th>Kind</th>
-    <th>Up Seats</th>
-    <th>Down Seats</th>
+    <th>Number</th>
+    <th>Type</th>
+    <th>Top Seats</th>
+    <th>Bottom Seats</th>
+    <th>Side Top Seats</th>
+    <th>Side Bottom Seats</th>
     <th colspan="3"></th>
   </tr>
   </thead>
 
   <tbody>
-    <%= render @carriages %>
+    <%= render 'carriages', carriages: @carriages %>
   </tbody>
 </table>
 
