--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -21,8 +21,8 @@
 <% else %>
   <p>Route has such stations:</p>
   <ul>
-    <% @route.railway_stations.each do |station| %>
-      <li><%= station.title %></li>
+    <% @route.railway_stations_routes.ordered.each do |rs_route| %>
+      <li><%= rs_route.railway_station.title %> | <%= rs_route.serial_number %></li>
     <% end %>
   </ul>
 <% end %>
