--- a/app/views/carriages/show.html.erb
+++ b/app/views/carriages/show.html.erb
@@ -1,43 +1,18 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Train:</strong>
-  <%= link_to @carriage.train.number.to_s, @carriage.train %>
-</p>
+<p><strong>Train: </strong><%= @carriage.train.number %></p>
 
-<p>
-  <strong>Type:</strong>
-  <%= @carriage.type.titleize %>
-</p>
+<p><strong>Type: </strong><%= @carriage.type.titleize %></p>
 
-<p>
-  <strong>Number:</strong>
-  <%= @carriage.number %>
-</p>
+<p><strong>Number: </strong><%= @carriage.number %></p>
 
-<p>
-  <strong>Top Seats:</strong>
-  <%= @carriage.top_seats %>
-</p>
+<p><strong>Top Seats: </strong><%= @carriage.top_seats %></p>
 
-<p>
-  <strong>Bottom Seats:</strong>
-  <%= @carriage.bottom_seats %>
-</p>
+<p><strong>Bottom Seats: </strong><%= @carriage.bottom_seats %></p>
 
 <% if @carriage.type == 'EconomyCarriage' %>
-  <p>
-    <strong>Side Top Seats:</strong>
-    <%= @carriage.side_top_seats %>
-  </p>
-
-  <p>
-    <strong>Side Bottom Seats:</strong>
-    <%= @carriage.side_bottom_seats %>
-  </p>
+  <p><strong>Side Top Seats: </strong><%= @carriage.side_top_seats %></p>
+  <p><strong>Side Bottom Seats: </strong><%= @carriage.side_bottom_seats %></p>
 <% end %>
 
-
-
-<%= link_to 'Edit', edit_carriage_path(@carriage) %> |
-<%= link_to 'Back', carriages_path %>
+<%= link_to 'Back', @carriage.train %>
