--- a/app/views/routes/show.html.erb
+++ b/app/views/routes/show.html.erb
@@ -22,19 +22,24 @@
   <p>Route has such stations:</p>
   <table>
     <thead>
-      <th>Title</th>
-      <th>Serial Number</th>
+      <td><strong>Title</strong></td>
+      <td><strong>Serial Number</strong></td>
     </thead>
     <tbody>
-      <% @route.railway_stations_routes.ordered.each do |rs_route| %>
+      <% @route.railway_stations.ordered.each do |station| %>
         <tr>
-          <td><%= rs_route.railway_station.title %></td>
-          <td><%= rs_route.serial_number %></td>
+          <td><%= station.title %></td>
+          <td>
+            <%= form_tag update_position_railway_station_path(station), method: :patch do %>
+              <%= number_field_tag :serial_number, station.serial_number(@route)  %>
+              <%= hidden_field_tag :route_id, @route.id %>
+              <%= submit_tag 'Edit' %>
+            <% end %>
+          </td>
         </tr>
-      <% end %>
+    <% end %>
     </tbody>
   </table>
 <% end %>
-
 <%= link_to 'Edit', edit_route_path(@route) %> |
 <%= link_to 'Back', routes_path %>
