--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,17 @@
   </head>
 
   <body>
+    <p id="notice" class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+
+    <% if user_signed_in? %>
+      <p><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></p>
+    <% else %>
+      <p><%= link_to 'Sign In', new_user_session_path %></p>
+    <% end %>
+
     <%= yield %>
+
     <footer>
       <%= render 'layouts/footer' %>
     </footer>
