screencast functionality done

--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -9,8 +9,8 @@
   <%= form.hidden_field :route_id, value: params[:route_id] %>
 
   <div class="field">
-    <%= form.label :name, "User's name" %>
-    <%= form.text_field :name %>
+    <%= form.label :client_name, "Client's name" %>
+    <%= form.text_field :client_name %>
   </div>
 
   <div class="actions">
