--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,4 +1,4 @@
-<p><strong>Your name: </strong><%= @ticket.user.name.titleize %></p>
+<p><strong>Client's name: </strong><%= @ticket.client_name.titleize %></p>
 
 <p><strong>Train: </strong><%= @ticket.train.number %></p>
 
