--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,7 @@
 
     <% if user_signed_in? %>
       <p><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></p>
+      <p>Account: <%= current_user.email %></p>
     <% else %>
       <p><%= link_to 'Sign In', new_user_session_path %></p>
     <% end %>
