--- a/app/views/carriages/new.html.erb
+++ b/app/views/carriages/new.html.erb
@@ -1,3 +1,39 @@
 <h1>New Carriage</h1>
 
-<%= render 'form', carriage: @carriage %>
+<%= form_with(model: [@train, @carriage.becomes(Carriage)], local: true) do |form| %>
+  <%= render 'common/errors', resource: @carriage %>
+
+  <div class="field">
+    <%= form.label :type %>
+    <%= form.select :type, Carriage::TYPES %>
+  </div>
+
+  <div class="field">
+    <%= form.label :seat_seats %>
+    <%= form.number_field :seat_seats %>
+  </div>
+
+  <div class="field">
+    <%= form.label :top_seats %>
+    <%= form.number_field :top_seats %>
+  </div>
+
+  <div class="field">
+    <%= form.label :bottom_seats %>
+    <%= form.number_field :bottom_seats %>
+  </div>
+
+  <div class="field">
+    <%= form.label :side_top_seats %>
+    <%= form.number_field :side_top_seats %>
+  </div>
+
+  <div class="field">
+    <%= form.label :side_bottom_seats %>
+    <%= form.number_field :side_bottom_seats %>
+  </div>
+
+  <div class="actions">
+    <%= form.submit "#{ @carriage.new_record?  ? 'Create' : 'Update' }" %>
+  </div>
+<% end %>
