--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -5,3 +5,5 @@
 <p><%= link_to 'Trains list', admin_trains_path %></p>
 
 <p><%= link_to 'Routes list', admin_routes_path %></p>
+
+<p><%= link_to 'Tickets list', admin_tickets_path %></p>
