--- a/app/views/admin/trains/_form.html.erb
+++ b/app/views/admin/trains/_form.html.erb
@@ -7,7 +7,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :current_station_id, 'Current Station' %>
+    <%= form.label :current_station %>
     <%= form.collection_select :current_station_id, RailwayStation.all, :id, :title %>
   </div>
 
