--- a/app/views/admin/railway_stations/_form.html.erb
+++ b/app/views/admin/railway_stations/_form.html.erb
@@ -1,12 +1,10 @@
 <%= form_with(model: [:admin, railway_station], local: true) do |form| %>
   <%= render 'common/errors', resource: railway_station %>
 
-  <div class="field">
+  <div class="form-group mx-sm-3 mb-2">
     <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= form.text_field :title, class: 'form-control' %>
   </div>
 
-  <div class="actions">
-    <%= form.submit "#{ railway_station.new_record?  ? t('.submit.create') : t('.submit.update') }" %>
-  </div>
+  <%= form.submit "#{ railway_station.new_record?  ? t('.submit.create') : t('.submit.update') }", class: 'btn btn-primary mb-2' %>
 <% end %>
