--- a/app/views/admin/railway_stations/_railway_station.html.erb
+++ b/app/views/admin/railway_stations/_railway_station.html.erb
@@ -1,6 +1,8 @@
 <tr>
   <td><%= railway_station.title %></td>
-  <td><%= link_to 'Show', [:admin, railway_station] %></td>
-  <td><%= link_to 'Edit', edit_admin_railway_station_path(railway_station) %></td>
-  <td><%= link_to 'Destroy', [:admin, railway_station], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <td>
+    <%= link_to 'Show', [:admin, railway_station], class: 'btn btn-warning btn-sm' %> |
+    <%= link_to 'Edit',  edit_admin_railway_station_path(railway_station), class: 'btn btn-success btn-sm' %> |
+    <%= link_to 'Destroy', [:admin, railway_station], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' %>
+  </td>
 </tr>
