--- a/app/views/admin/railway_stations/edit.html.erb
+++ b/app/views/admin/railway_stations/edit.html.erb
@@ -1,6 +1,10 @@
 <h1>Editing Railway Station</h1>
+<div class="row">
+  <div class="col-md-3">
+    <%= render 'form', railway_station: @railway_station %>
+  </div>
+</div>
 
-<%= render 'form', railway_station: @railway_station %>
+</br>
 
-<%= link_to 'Show', [:admin, @railway_station] %> |
-<%= link_to 'Back', admin_railway_stations_path %>
+<%= link_to 'Back', admin_railway_stations_path, class: 'btn btn-warning' %>
