--- a/app/views/admin/railway_stations/index.html.erb
+++ b/app/views/admin/railway_stations/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Railway Stations</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Title</th>
@@ -13,10 +13,7 @@
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Railway Station', new_admin_railway_station_path %>
-
-<br>
-
-<%= link_to 'Back', root_path %>
+<p>
+  <%= link_to 'New Railway Station', new_admin_railway_station_path, class: 'btn btn-primary' %> |
+  <%= link_to 'Back', admin_path, class: 'btn btn-warning' %>
+</p>
