--- a/app/views/admin/routes/_route.html.erb
+++ b/app/views/admin/routes/_route.html.erb
@@ -1,6 +1,8 @@
 <tr>
   <td><%= route.name %></td>
-  <td><%= link_to 'Show', [:admin, route] %></td>
-  <td><%= link_to 'Edit', edit_admin_route_path(route) %></td>
-  <td><%= link_to 'Destroy', [:admin, route], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <td>
+    <%= link_to 'Show', [:admin, route], class: 'btn btn-warning btn-sm' %> |
+    <%= link_to 'Edit',  edit_admin_route_path(route), class: 'btn btn-success btn-sm' %> |
+    <%= link_to 'Destroy', [:admin, route], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' %>
+  </td>
 </tr>
