--- a/app/views/admin/routes/edit.html.erb
+++ b/app/views/admin/routes/edit.html.erb
@@ -1,6 +1,10 @@
 <h1>Editing Route</h1>
 
-<%= render 'form', route: @route %>
+<div class="row">
+  <div class="col-md-3">
+    <%= render 'form', route: @route %>
+  </div>
+</div>
 
-<%= link_to 'Show', [:admin, @route] %> |
-<%= link_to 'Back', admin_routes_path %>
+<%= link_to 'Show', [:admin, @route], class: 'btn btn-success' %> |
+<%= link_to 'Back', admin_routes_path, class: 'btn btn-warning' %>
