--- a/app/views/admin/routes/index.html.erb
+++ b/app/views/admin/routes/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Routes</h1>
 
-<table>
+<table class="table">
   <thead>
   <tr>
     <th>Name</th>
@@ -13,10 +13,7 @@
   </tbody>
 </table>
 
-<br>
-
-<%= link_to 'New Route', new_admin_route_path %>
-
-<br>
-
-<%= link_to 'Back', root_path %>
+<p>
+  <%= link_to 'New Route', new_admin_route_path, class: 'btn btn-primary' %> |
+  <%= link_to 'Back', admin_path, class: 'btn btn-warning' %>
+</p>
