--- a/app/views/admin/routes/new.html.erb
+++ b/app/views/admin/routes/new.html.erb
@@ -1,5 +1,9 @@
 <h1>New Route</h1>
 
-<%= render 'form', route: @route %>
+<div class="row">
+  <div class="col-md-3">
+    <%= render 'form', route: @route %>
+  </div>
+</div>
 
-<%= link_to 'Back', admin_routes_path %>
+<%= link_to 'Back', admin_routes_path, class: 'btn btn-danger' %>
