--- a/app/views/admin/tickets/edit.html.erb
+++ b/app/views/admin/tickets/edit.html.erb
@@ -1,37 +1,36 @@
-<h1>Editing Railway Station</h1>
+<h1>Editing Ticket</h1>
+<div class="col-md-3 col-lg-4">
+  <%= form_with(model: [:admin, @ticket], local: true) do |form| %>
+    <%= render 'common/errors', resource: @ticket %>
 
-<%= form_with(model: [:admin, @ticket], local: true) do |form| %>
-  <%= render 'common/errors', resource: @ticket %>
+    <div class="field">
+      <%= form.label :client_name %>
+      <%= form.text_field :client_name, class: 'form-control' %>
+    </div>
 
-  <div class="field">
-    <%= form.label :client_name %>
-    <%= form.text_field :client_name %>
-  </div>
+    <div class="field">
+      <%= form.label :route_id, 'Route' %>
+      <%= form.collection_select :route_id, Route.all, :id, :name, class: 'form-control' %>
+    </div>
 
-  <div class="field">
-    <%= form.label :route_id, 'Route' %>
-    <%= form.collection_select :route_id, Route.all, :id, :name %>
-  </div>
+    <div class="field">
+      <%= form.label :begin_station_id, 'Begin Station' %>
+      <%= form.collection_select :begin_station_id, RailwayStation.all, :id, :title, class: 'form-control' %>
+    </div>
 
-  <div class="field">
-    <%= form.label :begin_station_id, 'Begin Station' %>
-    <%= form.collection_select :begin_station_id, RailwayStation.all, :id, :title %>
-  </div>
+    <div class="field">
+      <%= form.label :end_station_id %>
+      <%= form.collection_select :end_station_id, RailwayStation.all, :id, :title, class: 'form-control' %>
+    </div>
 
-  <div class="field">
-    <%= form.label :end_station_id %>
-    <%= form.collection_select :end_station_id, RailwayStation.all, :id, :title %>
-  </div>
+    <div class="field">
+      <%= form.label :side_bottom_seats %>
+      <%= form.number_field :side_bottom_seats, min: 1, class: 'form-control' %>
+    </div>
 
-  <div class="field">
-    <%= form.label :side_bottom_seats %>
-    <%= form.number_field :side_bottom_seats %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit "#{ @ticket.new_record?  ? 'Create' : 'Update' }" %>
-  </div>
-<% end %>
-
-<%= link_to 'Show', [:admin, @ticket] %> |
-<%= link_to 'Back', admin_tickets_path %>
+    <%= form.submit "#{ @ticket.new_record?  ? 'Create' : 'Update' }", class: 'btn btn-primary' %>
+  <% end %>
+  </br>
+  <%= link_to 'Show', [:admin, @ticket], class: 'btn btn-success' %> |
+  <%= link_to 'Back', admin_tickets_path, class: 'btn btn-warning' %>
+</div>
