--- a/app/views/admin/tickets/index.html.erb
+++ b/app/views/admin/tickets/index.html.erb
@@ -1,6 +1,6 @@
-<h1>Railway Stations</h1>
+<h1>Tickets</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Client's Name</th>
@@ -20,4 +20,4 @@
 
 </br>
 
-<%= link_to 'Back', root_path %>
+<%= link_to 'Back', admin_path, class: 'btn btn-warning' %>
