--- a/app/views/admin/trains/_train.html.erb
+++ b/app/views/admin/trains/_train.html.erb
@@ -1,6 +1,10 @@
 <tr>
   <td><%= train.number %></td>
-  <td><%= link_to 'Show', [:admin, train] %></td>
-  <td><%= link_to 'Edit', edit_admin_train_path(train) %></td>
-  <td><%= link_to 'Destroy', [:admin, train], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <td><%= train.route.name %></td>
+  <td><%= train.current_station.title %></td>
+  <td>
+    <%= link_to 'Show', [:admin, train], class: 'btn btn-warning btn-sm' %> |
+    <%= link_to 'Edit', edit_admin_train_path(train), class: 'btn btn-success btn-sm' %> |
+    <%= link_to 'Destroy', [:admin, train], method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-sm' %>
+  </td>
 </tr>
