--- a/app/views/admin/trains/edit.html.erb
+++ b/app/views/admin/trains/edit.html.erb
@@ -1,6 +1,10 @@
 <h1>Editing Train</h1>
 
-<%= render 'form', train: @train %>
-
-<%= link_to 'Show', [:admin, @train] %> |
-<%= link_to 'Back', admin_trains_path %>
+<div class="row">
+  <div class="col-md-3">
+    <%= render 'form', train: @train %>
+  </div>
+</div>
+</br>
+<%= link_to 'Show', [:admin, @train], class: 'btn btn-success' %> |
+<%= link_to 'Back', admin_trains_path, class: 'btn btn-warning' %>
