--- a/app/views/admin/trains/index.html.erb
+++ b/app/views/admin/trains/index.html.erb
@@ -1,9 +1,11 @@
 <h1>Trains</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Number</th>
+      <th>Route</th>
+      <th>Current Station</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,10 +15,8 @@
   </tbody>
 </table>
 
-<br>
 
-<%= link_to 'New Train', new_admin_train_path %>
-
-<br>
-
-<%= link_to 'Back', root_path %>
+<p>
+  <%= link_to 'New Train', new_admin_train_path, class: 'btn btn-primary' %> |
+  <%= link_to 'Back', admin_path, class: 'btn btn-warning' %>
+</p>
