--- a/app/views/admin/trains/new.html.erb
+++ b/app/views/admin/trains/new.html.erb
@@ -1,5 +1,8 @@
 <h1>New Train</h1>
-
-<%= render 'form', train: @train %>
-
-<%= link_to 'Back', admin_trains_path %>
+<div class="row">
+  <div class="col-md-3">
+    <%= render 'form', train: @train %>
+  </div>
+</div>
+</br>
+<%= link_to 'Back', admin_trains_path, class: 'btn btn-warning' %>
