--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -10,19 +10,30 @@
 </head>
 
 <body>
-<p id="notice" class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<%= bootstrap_flash %>
 
-<% if user_signed_in? %>
-  <p><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></p>
-  <p>Account: <%= current_user.email %></p>
-<% else %>
-  <p><%= link_to 'Sign In', new_user_session_path %></p>
-<% end %>
+<ul class="list-inline">
+  <% if user_signed_in? %>
+    <li class="list-inline-item">
+      <%= link_to 'Sign Out', destroy_user_session_path, method: :delete, class: 'btn btn-primary btn-sm' %>
+    </li>
+    <li class="list-inline-item">
+      <h5>Account: <%= current_user.email %></h5>
+    </li>
+  <% else %>
+    <li class="list-inline-item">
+      <%= link_to 'Sign In', new_user_session_path, class: 'btn btn-primary' %>
+    </li>
+  <% end %>
+</ul>
 
-<%= yield %>
+<div class="container-fluid">
+  <div class="row">
+    <%= yield %>
+  </div>
+</div>
 
-<footer>
+<footer class="col-md-12">
   <%= render 'layouts/footer' %>
 </footer>
 </body>
