--- a/app/views/admin/railway_stations/edit.html.erb
+++ b/app/views/admin/railway_stations/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing Railway Station</h1>
+<h1><%= t('.title') %></h1>
 <div class="row">
   <div class="col-md-3">
     <%= render 'form', railway_station: @railway_station %>
@@ -7,4 +7,4 @@
 
 </br>
 
-<%= link_to 'Back', admin_railway_stations_path, class: 'btn btn-warning' %>
+<%= link_to t('common.back'), admin_railway_stations_path, class: 'btn btn-warning' %>
