--- a/app/views/admin/routes/edit.html.erb
+++ b/app/views/admin/routes/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing Route</h1>
+<h1><%= t('.title') %></h1>
 
 <div class="row">
   <div class="col-md-3">
@@ -6,5 +6,4 @@
   </div>
 </div>
 
-<%= link_to 'Show', [:admin, @route], class: 'btn btn-success' %> |
-<%= link_to 'Back', admin_routes_path, class: 'btn btn-warning' %>
+<%= link_to t('common.back'), admin_routes_path, class: 'btn btn-warning' %>
