--- a/app/views/admin/routes/new.html.erb
+++ b/app/views/admin/routes/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Route</h1>
+<h1><%= t('.title') %></h1>
 
 <div class="row">
   <div class="col-md-3">
@@ -6,4 +6,4 @@
   </div>
 </div>
 
-<%= link_to 'Back', admin_routes_path, class: 'btn btn-danger' %>
+<%= link_to t('common.back'), admin_routes_path, class: 'btn btn-warning' %>
