--- a/app/views/admin/trains/_form.html.erb
+++ b/app/views/admin/trains/_form.html.erb
@@ -17,9 +17,9 @@
   </div>
 
   <div class="form-group">
-    <%= form.label :route_id, 'Route' %>
+    <%= form.label :route %>
     <%= form.select :route_id, options_from_collection_for_select(Route.all, :id, :name), class: 'form-control' %>
   </div>
 
-  <%= form.submit "#{ train.new_record?  ? 'Create' : 'Update' }", class: 'btn btn-primary' %>
+  <%= form.submit "#{ train.new_record?  ? t('.submit.create') : t('.submit.update') }", class: 'btn btn-primary' %>
 <% end %>
