--- a/app/views/admin/trains/edit.html.erb
+++ b/app/views/admin/trains/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Editing Train</h1>
+<h1><%= t('.title') %></h1>
 
 <div class="row">
   <div class="col-md-3">
@@ -6,5 +6,5 @@
   </div>
 </div>
 </br>
-<%= link_to 'Show', [:admin, @train], class: 'btn btn-success' %> |
-<%= link_to 'Back', admin_trains_path, class: 'btn btn-warning' %>
+
+<%= link_to t('common.back'), admin_trains_path, class: 'btn btn-warning' %>
