--- a/app/views/admin/trains/new.html.erb
+++ b/app/views/admin/trains/new.html.erb
@@ -1,8 +1,10 @@
-<h1>New Train</h1>
+<h1><%= t('.title') %></h1>
+
 <div class="row">
   <div class="col-md-3">
     <%= render 'form', train: @train %>
   </div>
 </div>
 </br>
-<%= link_to 'Back', admin_trains_path, class: 'btn btn-warning' %>
+
+<%= link_to t('common.back'), admin_trains_path, class: 'btn btn-warning' %>
