--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -1,17 +1,22 @@
-<ul class="list-group">
-  <li class="list-group-item">
-    <h4><strong>Client's name: </strong><%= @ticket.client_name.titleize %></h4>
-    <h4><strong>Train: </strong><%= @ticket.train.number %></h4>
-    <h4><strong>Route: </strong><%= @ticket.route.name %></h4>
-    <h4><strong>Client's name: </strong><%= @ticket.client_name.titleize %></h4>
-    <h4>
-      <strong><%= @ticket.begin_station.title %> Departure Time: </strong>
-      <%= @ticket.departure_time.try(:strftime,"%d.%m.%y - %H:%M") %>
-    </h4>
-    <h4>
-      <strong><%= @ticket.end_station.title %> Arrival Time: </strong>
-      <%= @ticket.arrival_time.try(:strftime,"%d.%m.%y - %H:%M") %>
-    </h4>
-  </li>
-</ul>
-<p><%= link_to 'Back', tickets_path, class: 'btn btn-warning' %></p>
+<div class="row">
+  <div class="col-md-5">
+    <ul class="list-group">
+      <li class="list-group-item">
+        <h4><strong>Client's name: </strong><%= @ticket.client_name.titleize %></h4>
+        <h4><strong>Train: </strong><%= @ticket.train.number %></h4>
+        <h4><strong>Route: </strong><%= @ticket.route.name %></h4>
+        <h4><strong>Client's name: </strong><%= @ticket.client_name.titleize %></h4>
+        <h4>
+          <strong><%= @ticket.begin_station.title %> Departure Time: </strong>
+          <%= @ticket.departure_time.try(:strftime,"%d.%m.%y - %H:%M") %>
+        </h4>
+        <h4>
+          <strong><%= @ticket.end_station.title %> Arrival Time: </strong>
+          <%= @ticket.arrival_time.try(:strftime,"%d.%m.%y - %H:%M") %>
+        </h4>
+      </li>
+    </ul>
+    <p><%= link_to 'Back', tickets_path, class: 'btn btn-warning' %></p>
+  </div>
+</div>
+
