--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,6 +56,7 @@
               <% if current_user.tickets.any? %>
                 <li><%= link_to "Tickets list", tickets_path %></li>
               <% end %>
+              <li style="margin-top: 7px"><h5>Account: <%= current_user.email %></h5></li>
             <% else %>
               <li><%= link_to "Log In", new_user_session_path %></li>
             <% end %>
@@ -72,8 +73,12 @@
         </div>
       </div><!--/row-->
 
-      <footer >
-        <p>&copy; Company 2018</p>
+      <footer>
+        <row>
+          <div class="col-md-2">
+            <p>&copy; Company 2018</p>
+          </div>
+        </row>
       </footer>
 
     </div> <!-- /container -->
