--- a/app/views/tickets/new.html.erb
+++ b/app/views/tickets/new.html.erb
@@ -1,19 +1,21 @@
-<h1>Buy Ticket</h1>
+<row>
+  <div class="col-md-3">
+    <h1>Buy Ticket</h1>
+    <%= form_with(model: @ticket, local: true) do |form| %>
+      <%= render 'common/errors', resource: @ticket %>
 
-<%= form_with(model: @ticket, local: true) do |form| %>
-  <%= render 'common/errors', resource: @ticket %>
+      <%= form.hidden_field :begin_station_id, value: params[:begin_station_id] || params[:ticket][:begin_station_id] %>
+      <%= form.hidden_field :end_station_id, value: params[:end_station_id] || params[:ticket][:end_station_id] %>
+      <%= form.hidden_field :train_id, value: params[:train_id] || params[:ticket][:train_id] %>
+      <%= form.hidden_field :route_id, value: params[:route_id] || params[:ticket][:route_id] %>
 
-  <%= form.hidden_field :begin_station_id, value: params[:begin_station_id] || params[:ticket][:begin_station_id] %>
-  <%= form.hidden_field :end_station_id, value: params[:end_station_id] || params[:ticket][:end_station_id] %>
-  <%= form.hidden_field :train_id, value: params[:train_id] || params[:ticket][:train_id] %>
-  <%= form.hidden_field :route_id, value: params[:route_id] || params[:ticket][:route_id] %>
+      <div class="form-group">
+        <%= form.label :client_name, "Client's name" %>
+        <%= form.text_field :client_name, class: 'form-control' %>
+      </div>
 
-  <div class="field">
-    <%= form.label :client_name, "Client's name" %>
-    <%= form.text_field :client_name %>
+      <%= form.submit 'Buy Ticket', class: 'btn btn-primary' %>
+    <% end %>
   </div>
+</row>
 
-  <div class="actions">
-    <%= form.submit 'Buy Ticket' %>
-  </div>
-<% end %>
